--- a/index.html
+++ b/index.html
@@ -1,33 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat Page</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="bg-container">
-      <div class="container">
-        <h1 class="main-heading">Rahul</h1>
-        <div class="message-container">
-          <p class="message-text message-sent">Hello Rahul, how are you?</p>
-          <p class="message-text message-received">
-            Hi varakumar, I am good. How about you?
-          </p>
-          <p class="message-text message-sent">
-            I'm fine. I published my website recently
-          </p>
-          <p class="message-text message-received">
-            Oh great varakumar! Can you send me the URL?
-          </p>
-          <p class="message-text message-sent">https://varakumar.ccbp.tech</p>
-          <p class="message-text message-received">
-            Awesome Varakumar, where did you learn?
-          </p>
-          <p class="message-text message-sent">NxtWave CCBP 4.0 Program</p>
+<html>
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <div id="section_home_page">
+        <div class="conference_page">
+            <p> Conference Home Page: </p>
+            <img src=" https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/conference-img.png" class="conference_image">
+            <div class="container1">
+                <h1 class="heading"> The Things Conference</h1>
+                <p class="paragraph"> Redefining the future of IoT with LoRaWAN</p>
+                <button class="btn btn-primary" onclick="display('section_details_page')"> Know more</button>
+            </div>
         </div>
-      </div>
     </div>
-  </body>
+    <div id="section_detail_page">
+        <div>
+            <p>Conference Details Page: </p>
+            <div class="embed-responsive embed-reponsive-16by9">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=vKJ6nXE_6Hc" allowfullscreen></iframe>
+            </div>
+            <div class="container1">
+                <h1 class="heading">The Things Conference</h1>
+                <p class="paragraph">Join Asia's Largest Conference on LoRaWAN</p>
+                <div class="d-flex flex-row justify-content-between">
+                    <div class="margin1">
+                        <h1 class="h1"> 1400+</h1>
+                        <p class="p"> Attendees</p>
+                    </div>
+                    <div class="margin2">
+                        <h1 class="h1"> 100+ </h1>
+                        <p class="p"> Workshops </p>
+                    </div>
+                </div>
+                <div class="d-flex flex-row justify-content-between">
+                    <div class="margin1">
+                        <h1 class="h1"> 120+</h1>
+                        <p class="p">Speakers</p>
+                    </div>
+                    <div class="margin2">
+                        <h1 class="h1"> 10+ </h1>
+                        <p class="p">Countries</p>
+                    </div>
+                </div>
+                <button class="btn btn-primary" onclick="display('section_home_page')">Back</button>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/js/ccbp-ui-kit.js"></script>
+</body>
+
 </html>
